--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -6,11 +6,31 @@
     <title>Document</title>
 </head>
 <body>
-<table id="tabela"></table>
-<script src="main.js"></script>
-<table id="tabela2"></table>
-<input type="text" id="id">
-<button onclick="perid()">PERDID</button>
-<script src="perid.js"></script>
+    <div>
+        <table id="tabela"></table>
+        <script src="main.js"></script>
+        <table id="tabela2"></table>
+        <input type="text" id="id">
+    </div>
+    <div>
+        <button onclick="perid()">PERDID</button>
+        <script src="perid.js"></script>
+    </div>
+    <div>
+        <input type="text" id="id2">
+        <input type="text" id="name">
+        <input type="text" id="email">
+        <button onclick="update()">Update</button>
+    </div>
+
+    <form id="insertForm">
+        <label for="name">Name:</label>
+        <input type="text" id="name2" name="name"><br>
+
+        <label for="email">Email:</label>
+        <input type="email" id="email2" name="email"><br>
+
+        <input type="submit" value="Submit">
+    </form>
 </body>
 </html>
